--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>I loooove youu ❤️</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="https://giphy.com/gifs/cat-hug-cutie-qFmdpUKAFZ6rMobzzu"
         alt="Fireworks"
       />
     </section>
@@ -300,5 +300,6 @@
   </script>
 </body>
 </html>
+
 
 
