Fix HTML entity references in index.html
Correct HTML entity references to ensure proper rendering.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>I loooove youu ❤️</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/gifs/cat-hug-cutie-qFmdpUKAFZ6rMobzzu"
+        src="https://giphy.com/gifs/cat-hug-cutie-qFmdpUKAFZ6rMobzzu"
         alt="Fireworks"
       />
     </section>
@@ -300,6 +300,7 @@
   </script>
 </body>
 </html>
+
 
 
 
